2001-01-27  Akim Demaille  <akim@epita.fr>

	Follow Tim Van Holder's suggestions for a uniform handling of
	symlinks.

	* m4sh.m4: Stay in `as_', not `ac_'.
	(_AS_LN_S_PREPARE): Eve out from...
	* acspecific.m4 (AC_PROG_LN_S): here.  Adjust.
	* m4sh.m4 (AS_LN_S): New.
	(AS_SHELL_PREPARE): Call _AS_LN_S_PREPARE.

2001-01-26  Assar Westerlund  <assar@sics.se>

	* autoreconf.sh (find): Fix precedence.
	(aclocal): Same as below for autoheader.

2001-01-26  Akim Demaille  <akim@epita.fr>

	* autoreconf.sh (autoheader): Run it when there is no template, as
	there is no risk to override a handwritten template.
	From Assar Westerlund.

2001-01-26  Akim Demaille  <akim@epita.fr>

	* aclang.m4: dnl AC_ARG_VAR's newline.
	(AC_PROG_CC, AC_PROG_F77, AC_PROG_CXX): AC_ARG_VAR(LDFLAGS).
	* acgeneral.m4 (AC_CHECK_LIB): Don't do it.

2001-01-26  Akim Demaille  <akim@epita.fr>

	* tests/mktests.sh: Handle DOS issues: directory separator, single
	dot in file names, and one actual bug: when set -e, running
	(false; true) will of course fail, use (false || true).
	From Tim Van Holder.

2001-01-26  Tim Van Holder <tim.van.holder@pandora.be>

	* tests/Makefile.am (testsuite): Use testsuite.tmp, not
	testsuite-tmp as temporary file.

2001-01-25  Assar Westerlund  <assar@sics.se>

	* autoreconf.sh: Also find configure.in.

2001-01-24  Akim Demaille  <akim@epita.fr>

	* configure.in: Bump to 2.49d.

2001-01-24  Akim Demaille  <akim@epita.fr>

	Version 2.49c.

2001-01-24  Jim Meyering  <meyering@lucent.com>

	* autoscan.pl (output): Detect/report a close failure.

2001-01-24  Akim Demaille  <akim@epita.fr>

	Preserve INSTALL too.

	* acgeneral.m4 (_AC_OUTPUT_FILES): Use ac_INSTALL for internal
	computations, and therefore use INSTALL where ac_given_INSTALL
	was used.
	(_AC_OUTPUT_SUBDIRS): There is no point in computing INSTALL in
	here.  It's not even used.

2001-01-24  Akim Demaille  <akim@epita.fr>

	While preserved in configure, srcdir is trashed in config.status.